# benchmarker

./: .gitignore  README.md  lp_join_experiment_eval.py  lp_join_experiment_run.py  lp_join_micro_run.py  nightly_tpc_experiment_run.py  pyproject.toml
config/benchmark/: clickbench.py  imdb.py  join_micro_build.py  join_micro_join_selectivity.py  join_micro_probe.py  tpcds.py  tpch.py
config/systems/: duckdb.py
docs/: tpc-ds.sql  tpc-h.sql
experiments/: duckdb_collision_bits.py  duckdb_join_build_partitioned_imdb.py  duckdb_join_build_partitioned_micro.py  duckdb_join_linear_probing_tpch.py  duckdb_nightly_tpcds.py  duckdb_optional_match_null.py  duckdb_optional_probe_sel.py  duckdb_optional_probe_sel_micro.py  duckdb_string_equality.py  duckdb_validity_test.py  duckdb_with_bf.py  duckdb_with_bf_micro.py  duckdb_without_atomics.py
reports/pr_duckdb_bf/: bf_pr.py
src/: logger.py  metrics.py  models.py  utils.py
src/builder/: system_builder.py
src/eval/: run_evaluation.py
src/runner/: experiment_prepper.py  experiment_runner.py
