[tool.poetry]
name = "benchmarker"
version = "0.1.0"
description = ""
authors = ["PGross <paul.riedlingen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.67.1"
pandas = "^2.2.3"
duckdb = "^1.1.3"
numpy = "^2.2.2"
plotly = "^6.0.0"
logging = "^0.4.9.6"
psutil = "^6.1.1"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
